--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,113 +1,50 @@
 ---
 layout: page
+title: About me
+subtitle: 'Or: why you would want to talk to me'
+css: /css/aboutme.css
+published: true
 ---
 
 {{ content }}
 
-{% assign posts = paginator.posts | default: site.posts %}
 
-<!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
-<ul class="posts-list list-unstyled" role="list">
-  {% for post in posts %}
-  <li class="post-preview">
-    <article>
+<div id="aboutme-section">
 
-      {%- capture thumbnail -%}
-        {% if post.thumbnail-img %}
-          {{ post.thumbnail-img }}
-        {% elsif post.cover-img %}
-          {% if post.cover-img.first %}
-            {{ post.cover-img[0].first.first }}
-          {% else %}
-            {{ post.cover-img }}
-          {% endif %}
-        {% else %}
-        {% endif %}
-      {% endcapture %}
-      {% assign thumbnail=thumbnail | strip %}
+<p class="about-text">
+<span class="fa fa-briefcase about-icon"></span>
+I am presently in a Software Engineer atJP Morgan Chase. Previously I have interned in the same firm.
+</p>
 
-      {% if site.feed_show_excerpt == false %}
-      {% if thumbnail != "" %}
-      <div class="post-image post-image-normal">
-        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
-        </a>
-      </div>
-      {% endif %}
-      {% endif %}
+<p class="about-text">
+<span class="fa fa-graduation-cap about-icon"></span>
+I finished my schooling phase of life with a Bachlors degree in <strong>Information Technology</strong> from <a href="https://vjti.ac.in/" target="_blank">Veermata Jijabai Technologial Institute (VJTI)</a>. Some of the course work included Data Structures and Algorithms, Machine Learing, Artificial Intelligence, Software Anaylsis and Design, Operating Systems.
+</p>
 
-      <a href="{{ post.url | absolute_url }}">
-        <h2 class="post-title">{{ post.title | strip_html }}</h2>
+<p class="about-text">
+<span class="fa fa-code about-icon"></span>
+I enjoy writing <strong>useful & reusable software tools</strong> to help others &mdash; check out <a href="/projects">my projects</a>. 
+</p>
 
-        {% if post.subtitle %}
-          <h3 class="post-subtitle">
-          {{ post.subtitle | strip_html }}
-          </h3>
-        {% endif %}
-      </a>
+<p class="about-text">
+<span class="fa fa-heart about-icon"></span>
+I'm addicted to skiing, skating, <strong>reading</strong> at any given (and non-given) moment, getting into philosophical debates,
+and meeting new people :) 
+</p>
 
-      <p class="post-meta">
-        {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-        Posted on {{ post.date | date: date_format }}
-      </p>
+<p class="about-text">
+<span class="fa fa-file-text-o about-icon"></span>
+The <strong><a href="/projects">projects</a></strong> page is a nice place to see some of my work, but you can also view my <a href="http://shreyzo.github.io/resume.pdf" target="_blank">resume</a>. 
+</p>
 
-      {% if thumbnail != "" %}
-      <div class="post-image post-image-small">
-        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
-        </a>
-      </div>
-      {% endif %}
+</div>
 
-      {% unless site.feed_show_excerpt == false %}
-      {% if thumbnail != "" %}
-      <div class="post-image post-image-short">
-        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
-        </a>
-      </div>
-      {% endif %}
+<div id="contactme-section">
+<h1 id="contact">Contact</h1>
 
-      <div class="post-entry">
-        {% assign excerpt_length = site.excerpt_length | default: 50 %}
-        {{ post.excerpt | strip_html | truncatewords: excerpt_length }}
-        {% assign excerpt_word_count = post.excerpt | number_of_words %}
-        {% if post.content != post.excerpt or excerpt_word_count > excerpt_length %}
-          <a href="{{ post.url | absolute_url }}" class="post-read-more">[Read&nbsp;More]</a>
-        {% endif %}
-      </div>
-      {% endunless %}
+<p>You can find <a href="mailto:zodeshreya@gmail.com">my email</a> and social media links at the bottom of every page.</p>
 
-      {% if site.feed_show_tags != false and post.tags.size > 0 %}
-      <div class="blog-tags">
-        <span>Tags:</span>
-        <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
-        <ul class="d-inline list-inline" role="list">
-          {% for tag in post.tags %}
-          <li class="list-inline-item">
-            <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>
-          </li>
-          {% endfor %}
-        </ul>
-      </div>
-      {% endif %}
+</div>
 
-    </article>
-  </li>
-  {% endfor %}
-</ul>
-
-{% if paginator.total_pages > 1 %}
-<ul class="pagination main-pager">
-  {% if paginator.previous_page %}
-  <li class="page-item previous">
-    <a class="page-link" href="{{ paginator.previous_page_path | absolute_url }}">&larr; Newer Posts</a>
-  </li>
-  {% endif %}
-  {% if paginator.next_page %}
-  <li class="page-item next">
-    <a class="page-link" href="{{ paginator.next_page_path | absolute_url }}">Older Posts &rarr;</a>
-  </li>
-  {% endif %}
-</ul>
-{% endif %}
+<br/><br/>
+<hr class="small" />
