--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,22 +13,22 @@ published: true
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-I am presently in a Software Engineer atJP Morgan Chase. Previously I have interned in the same firm.
+I am presently working as a Software Engineer at JP Morgan Chase. Previously I have interned in the same firm back in 2020.
 </p>
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-I finished my schooling phase of life with a Bachlors degree in <strong>Information Technology</strong> from <a href="https://vjti.ac.in/" target="_blank">Veermata Jijabai Technologial Institute (VJTI)</a>. Some of the course work included Data Structures and Algorithms, Machine Learing, Artificial Intelligence, Software Anaylsis and Design, Operating Systems.
+I finished my schooling phase of life with a Bachlors degree in <strong>Information Technology</strong> from <a href="https://vjti.ac.in/" target="_blank">Veermata Jijabai Technologial Institute (VJTI)</a>. Some of the course work included Data Structures and Algorithms, Machine Learing, Artificial Intelligence, System Anaylsis and Design, Operating Systems.
 </p>
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I enjoy writing <strong>useful & reusable software tools</strong> to help others &mdash; check out <a href="/projects">my projects</a>. 
+I enjoy writing <strong>useful & reusable code</strong>. I have fair knowledge of C++, Java, Python, Git, MySQL. &mdash; check out <a href="/projects">my projects</a>. 
 </p>
 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
-I'm addicted to skiing, skating, <strong>reading</strong> at any given (and non-given) moment, getting into philosophical debates,
+I like watching series and spending time with my <strong>siblings</strong> at any given (and non-given) moment, discussing weird paradoxes,
 and meeting new people :) 
 </p>
 
