--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,8 @@
   {% endif %}
 
   {% if site.keywords %}
-  <meta name="keywords" content="{{ site.keywords }}">
+  <meta name="keywords" content="shreya zode, zodeshreya, Shreya, Zode, Software Engineer, VJTI, shreyazode,
+  Shreya Zode VJTI, Shreya Zode JPMC, Shreya Zode JP Morgan, Shreya Zode Homepage, Shreya Zode BIO, Shreya Zode Profile, Shreya Zode official website, Shreya Zode resume">
   {% endif %}
 
   {% if site.rss-description %}
