--- a/_includes/header.html
+++ b/_includes/header.html
@@ -88,6 +88,114 @@
     </div>
   </div>
 </div>
+
+<!-- start -->
+<div class="intro-header no-img">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <div class="{{ include.type }}-heading">
+          <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
+		  {% if page.subtitle %}
+		    {% if include.type == "page" %}
+            <hr class="small">
+            <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
+			{% else %}
+			<h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
+			{% endif %}
+			
+		<div class="row" style="margin-top: 12px;">
+	      	<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	        <ul class="list-inline text-center footer-links">
+	          {% if site.author.facebook and site.footer-links-active.facebook %}
+	          <li>
+	            <a href="https://www.facebook.com/{{ site.author.facebook }}" title="Facebook">
+	              <span class="fa-stack fa-lg">
+	                <i class="fa fa-circle fa-stack-2x"></i>
+	                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+	              </span>
+	            </a>
+	          </li>
+	          {% endif %}
+	          
+	          {% if site.author.linkedin and site.footer-links-active.linkedin %}
+	          <li>
+	            <a href="https://linkedin.com/{{ site.author.linkedin }}" title="LinkedIn">
+	              <span class="fa-stack fa-lg">
+	                <i class="fa fa-circle fa-stack-2x"></i>
+	                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+	              </span>
+	            </a>
+	          </li>
+	          {% endif %}
+	          
+	          {% if site.author.github and site.footer-links-active.github %}
+	          <li>
+	            <a href="https://github.com/{{ site.author.github }}" title="GitHub">
+	              <span class="fa-stack fa-lg">
+	                <i class="fa fa-circle fa-stack-2x"></i>
+	                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+	              </span>
+	            </a>
+	          </li>
+	          {% endif %}
+			  {% if site.author.twitter and site.footer-links-active.twitter %}
+	          <li>
+	            <a href="https://twitter.com/{{ site.author.twitter }}" title="Twitter">
+	              <span class="fa-stack fa-lg">
+	                <i class="fa fa-circle fa-stack-2x"></i>
+	                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+	              </span>
+	            </a>
+	          </li>
+	          {% endif %}
+			  {% if site.author.email and site.footer-links-active.email %}
+	          <li>
+	            <a href="mailto:{{ site.author.email }}" title="Email me">
+	              <span class="fa-stack fa-lg">
+	                <i class="fa fa-circle fa-stack-2x"></i>
+	                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+	              </span>
+	            </a>
+	          </li>
+	          {% endif %}
+		
+			  {% if site.author.stackoverflow and site.footer-links-active.stackoverflow %}
+	          <li>
+	            <a href="https://stackoverflow.com/users/{{ site.author.stackoverflow }}" title="StackOverflow">
+	              <span class="fa-stack fa-lg">
+	                <i class="fa fa-circle fa-stack-2x"></i>
+	                <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
+	              </span>
+	            </a>
+	          </li>
+	          {% endif %}
+			  {% if site.footer-links-active.rss %}
+			  <li>
+				<a href="{{ '/feed.xml' | prepend: site.baseurl }}" title="RSS">
+				  <span class="fa-stack fa-lg">
+					<i class="fa fa-circle fa-stack-2x"></i>
+					<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+				  </span>
+				</a>
+			  </li>		
+	          {% endif %}		  
+	        </ul> 
+	      </div>
+	    	</div>
+
+		  {% endif %}
+		  
+		  {% if include.type == "post" %}
+		  <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
+		  {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end -->
+
 </header>
 
 
